# python-vodem-vodafone-K4607-Z

./: .flake8  .python-version  AUTHORS  ChangeLog  LICENSE  README.rst  setup.cfg  setup.py
data/: 20205.js  20404.js  20601.js  20810.js  21401.js  21670.js  21910.js  22005.js  22210.js  22601.js  22801.js  23003.js  23201.js  23402.js  23415.js  23801.js  2380171.js  2380172.js  24405.js  24602.js  24705.js  24802.js  26202.js  26209.js  26801.js  27077.js  27201.js  27402.js  27602.js  27801.js  28001.js  28401.js  28602.js  2860251.js  28802.js  29340.js  29403.js  40004.js  40401.js  40405.js  (+54 more)
docs/: Makefile  conf.py  docs.sh  index.rst  make.bat
docs/source/: modules.rst  vodem.api.rst  vodem.connection.rst  vodem.exceptions.rst  vodem.rst  vodem.simple.rst  vodem.util.rst
examples/: debug.py  loop.py
test/unit/api/: __init__.py  test_account_type.py  test_activate_flag.py  test_apn_config.py  test_cell_id.py  test_connect_network.py  test_connection_mode.py  test_current_upgrade_state.py  test_custom_account_type.py  test_delete_sms.py  test_dial_mode.py  test_disable_pin.py  test_disconnect_network.py  test_dns_mode.py  test_enable_pin.py  test_enter_pin.py  test_enter_puk.py  test_get_sim_status.py  test_hardware_version.py  test_if_upgrade.py  test_imei.py  test_ipv4_apn_list.py  test_ipv6_apn_config.py  test_ipv6_apn_list.py  test_ipv6_dns_mode.py  test_ipv6_prefer_dns_auto.py  test_ipv6_prefer_dns_manual.py  test_ipv6_standby_dns_auto.py  test_ipv6_standby_dns_manual.py  (+85 more)
vodem/: api.py  connection.py  exceptions.py  simple.py  util.py
(+4 files in other folders)
