[metadata]
name = vodem-vodafone-K4607-Z
author = alzeih
author-email = alzeih@users.noreply.github.com
summary = Vodafone Vodafone K4607-Z web interface python bindings
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/vodem-vodafone-K4607-Z
requires-python = >=3.5
classifier =
        Development Status :: 3 - Alpha
        Operating System :: OS Independent
        License :: OSI Approved :: MIT License
        Topic :: Communications :: Telephony
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.5
install_requires = requirements.txt

[files]
packages =
	vodem 

[pbr]
autodoc_tree_index_modules=True
autodoc_index_modules=True

[extras]
dev =
	pylint
	sphinx

[build_sphinx]
all_files = 1
